# KRFAnalysis

./: .clang-format  .gitignore  .travis.yml  Dockerfile  README.md
KRFAnalysisPass/: CMakeLists.txt  KRF.cpp  reverseTaint.cpp  toctou.cpp
binja/: README.md  analyze.py  gdb.py  krf.py  main.py
binja/taint_plugin/: README.md  __init__.py
test-bc/: .travis.yml  grep.bc  grep.ll  gzip.bc  gzip.ll
tests/: accessOpen.cpp  common.h  errnoAndRetValueChecked.cpp  errnoChecked.cpp  retValueChecked.cpp  retValueUnchecked.cpp  runTests.py  taintedExternal.cpp  taintedExternalThroughFunc.cpp  taintedSyscall.cpp  taintedSyscallThroughFunc.cpp  taintedVariadic.cpp  taintedVariadicThroughFunc.cpp  tmpnamOpen.cpp
triage/: triage.py
